package sud_tanj.com.icare.Backend.Sensors;

/**
 * This class is part of iCare Project
 * Any modified within this class without reading the
 * manual will cause problem!
 * <p>
 * Created by Sudono Tanjung on 09/08/2018 - 16:54.
 * <p>
 * This class last modified by User
 */
public interface SensorListener  {
    void onCalculationDone(double value);
}
