@startuml

title __SENSORS's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        abstract class BaseMicrocontrollerSensor {
            {abstract} # calculateResult()
            + onDispose()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        abstract class BaseSensor {
            {static} # baseSensors : List<BaseSensor>
            # BaseSensor()
            # onEventListenerFired()
            {abstract} + getUnitMeasurement()
            {static} + getBaseSensors()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        abstract class BuiltInSensor {
            {static} - context : Context
            {static} + init()
            + onDispose()
            + BuiltInSensor()
            {static} + getContext()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        interface SensorListener {
            {abstract} + onCalculationDone()
        }
      }
    }
  }
  

  BaseMicrocontrollerSensor -up-|> BaseSensor
  BaseSensor -up-|> BaseAbstractComponent
  BuiltInSensor -up-|> BaseSensor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
